<resources>
    <string name="app_name">Never too late to learn</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!--learn contents overview-->
    <!--编号用来启动activity 详见MainActivity中的onItemClick-->
    <string name="learn_UI_base">0.基础UI学习<!--编号0--></string>
    <string name="learn_component">1.四大组件学习<!--编号1--></string>
    <string name="learn_layout">2.四大布局学习<!--编号2--></string><!--绝对布局已放弃-->
    <string name="learn_interaction">3.友好交互学习<!--编号3--></string>
    <string name="learn_data_storage">4.数据存储学习<!--编号4--></string>
    <string name="learn_http">5.网络访问学习<!--编号5--></string>
    <string name="learn_animation">6.动画学习<!--编号6--></string>
    <string name="learn_draw_view">7.画图学习<!--编号7--></string>
    <string name="learn_media_camera">8.多媒体与相机学习<!--编号8--></string>
    <string name="learn_UI_advanced">9.高级UI学习<!--编号9--></string>
    <string name="learn_style">10.样式开发学习<!--编号10--></string>
    <string name="learn_threads">11.多线程与通信学习<!--编号11--></string>
    <string name="learn_others">12.其他学习<!--编号12--></string>

    <!--编号0: 基础UI学习-->
    <string name="last_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="finish">结束</string>

    <!--编号1: 四大组件学习-->
    <string name="rx_practise">rx practise</string>

    <!--编号4: data storage-->
    <string name="data_storage_images">Images</string>
    <string name="data_storage_audios">Audios</string>
    <string name="data_storage_videos">Videos</string>
    <string name="data_storage_documents">Documents</string>
    <string name="data_storage_archives">Archives</string>
    <string name="data_storage_apps">Apps</string>
    <string name="data_storage_downloads">Downloads</string>
    <string name="data_storage_more">More</string>

    <!--编号5：网络访问-->
    <string name="http_httpclient">HttpClient test</string>
    <string name="http_httpurlconneciton">HttpUrlConnection test</string>

    <!--编号6: animation-->
    <string name="anim_type_tween">Tween Animation</string>
    <string name="anim_tween_scale">Scale</string>
    <string name="anim_tween_alpha">alpha</string>
    <string name="anim_tween_translate">translate</string>
    <string name="anim_tween_rotate">rotate</string>
    <string name="anim_set_rotate">set</string>
    <string name="anim_type_frame">Frame Animation</string>
    <string name="anim_type_property">Property Animation</string>

    <!--编号7: 画图学习-->
    <string name="draw_follow_view">手势跟随</string>

    <!--编号9: ui advanced-->
    <string name="ui_drag">拖拽、侧滑展示</string>
    <string name="ui_html_tag">Load Html Tag</string>
    <string name="ui_signature">手写签名</string>
    <string name="ui_clear_signature">清除签名</string>
    <string name="ui_complete_signature">完成签名</string>
    <string name="ui_flipper">翻页效果</string>
    <string name="ui_capture">OCR 第一步</string>
    <string name="ui_audio_record">仿微信录音</string>

    <!--编号11：多线程通信-->
    <string name="ipc_aidl">AIDL Practice</string>
    <string name="threads_sync">多线程-同步</string>
</resources>
