<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_animation"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.nttn.coolandroid.learnanimation.AnimationActivity">

    <TextView
        style="@style/AnimationText"
        android:text="@string/anim_type_tween"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_scale_anim"
            style="@style/AnimationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anim_tween_scale"/>


        <Button
            android:id="@+id/btn_translate_anim"
            style="@style/AnimationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/anim_tween_translate"/>

        <Button
            android:id="@+id/btn_alpha_anim"
            style="@style/AnimationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anim_tween_alpha"/>

        <Button
            android:id="@+id/btn_rotate_anim"
            style="@style/AnimationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anim_tween_rotate"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_set_anim"
        style="@style/AnimationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anim_set_rotate"/>

    <TextView
        style="@style/AnimationText"
        android:text="@string/anim_type_frame"/>

    <Button
        android:id="@+id/btn_frame_anim"
        style="@style/AnimationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anim_type_frame"/>

    <TextView
        style="@style/AnimationText"
        android:text="@string/anim_type_property"/>

    <Button
        android:id="@+id/btn_property_anim"
        style="@style/AnimationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anim_type_property"/>

    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_test_anim"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>
